tests/chainsaw-multi-ns/ingresses/namespace-a/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-a
  namespace: namespace-a
spec:
  ingressClassName: ngrok-a
  rules:
    - host: (join('', ['ing-test-a', $ngrokDomainSuffix]))
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
