tests/chainsaw-multi-ns/ingresses/namespace-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: namespace-a
  labels:
    app.kubernetes.io/name: test-server-a
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: test-server-a
